--- a/stv_project_2.4.5/stv_project_2.4.5/Base.lproj/Main.storyboard
+++ b/stv_project_2.4.5/stv_project_2.4.5/Base.lproj/Main.storyboard
@@ -132,11 +132,19 @@
                                     <action selector="button:" destination="Xvb-sg-P76" eventType="touchUpInside" id="ula-Fz-G2Q"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dUU-P9-7xa">
+                                <rect key="frame" x="265" y="596" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="viI-kc-JUK"/>
                     </view>
                     <connections>
+                        <outlet property="countLabel" destination="dUU-P9-7xa" id="q2U-qp-eSg"/>
                         <outlet property="dateLabel" destination="E9G-ld-HDK" id="7aT-w4-TE3"/>
                         <outlet property="imageView" destination="6ek-bV-ao2" id="eBl-FS-tNe"/>
                         <outlet property="imageurlLabel" destination="n1y-TF-yl8" id="FQN-Zs-IS0"/>
