--- a/Calendar/Calendar/Base.lproj/Main.storyboard
+++ b/Calendar/Calendar/Base.lproj/Main.storyboard
@@ -129,7 +129,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-860" y="53.523238380809602"/>
+            <point key="canvasLocation" x="-455" y="14"/>
         </scene>
     </scenes>
 </document>
